New in spot 2.11.5.dev  (not yet released)

  Library:

  - The following new trivial simplifications have been implemented for SEREs:
    - f|[+] = [+] if f rejects [*0]
    - f|[*] = [*] if f accepts [*0]
    - f&&[+] = f if f rejects [*0]
    - b:b[*i..j] = b[*max(i,1)..j]
    - b[*i..j]:b[*k..l] = b[*max(i,1)+max(k,1)-1, j+l-1]

  - The HOA parser is a bit smarter when merging multiple initial
    states into a single initial state (Spot's automaton class
    supports only one): it now reuse the edges leaving initial states
    without incoming transitions.

  - spot::bdd_to_cnf_formula() is a new variant of spot::bdd_to_formula()
    that converts a BDD into a CNF instead of a DNF.

New in spot 2.11.5  (2023-04-20)

  Bug fixes:

  - Fix spurious failure of ltlsynt2.test when Python is not installed
    (issue #530).

  - Building from the git repository would fail to report a missing
    emacs (issue #528).

  - Fix exception raised by aut1.intersecting_run(aut2).as_twa()
    because the run did not match transitions present in aut1
    verbatim.  We also changed the behavior of as_twa() to not merge
    identical states.

  - Fix segfaults occuring in determinization of 1-state terminal
    automata.

  - Fix incorrect assertion in game solver when the edge vector
    contains deleted transitions.

New in spot 2.11.4  (2023-02-10)

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

  Bug fixes:

  - When merging initial states from state-based automata with
    multiple initial states (because Spot supports only one), the HOA
    parser could break state-based acceptance.  (Issue #522.)

  - autfilt --highlight-word refused to work on automata with Fin
    acceptance for historical reasons, however the code has been
    perfectly able to handle this for a while.  (Issue #523.)

  - delay_branching_here(), a new optimization of Spot 2.11 had an
    incorrect handling of states without successors, causing some